force-app/main/default/objects/Field_Audit_Log__c/Field_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Field Audit Log</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>RowNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>