force-app/main/default/objects/Field_Audit_Log__c/fields/AuditKey__c.field-meta.xml
<CustomField>
    <fullName>AuditKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>AuditKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>