force-app/main/default/objects/Field_Audit_Log__c/fields/ChangedAt__c.field-meta.xml
<CustomField>
    <fullName>ChangedAt__c</fullName>
    <label>ChangedAt</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>