force-app/main/default/objects/Field_Audit_Log__c/fields/ChangedBy__c.field-meta.xml
<CustomField>
    <fullName>ChangedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChangedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>