force-app/main/default/objects/Field_Audit_Log__c/fields/ChangeSource__c.field-meta.xml
<CustomField>
    <fullName>ChangeSource__c</fullName>
    <label>ChangeSource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INTERNAL</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>