force-app/main/default/objects/Field_Audit_Log__c/fields/LastEventHash__c.field-meta.xml
<CustomField>
    <fullName>LastEventHash__c</fullName>
    <label>LastEventHash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>