force-app/main/default/objects/Field_Audit_Log__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>NewValue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>