force-app/main/default/objects/Field_Audit_Log__c/fields/ValueHash__c.field-meta.xml
<CustomField>
    <fullName>ValueHash__c</fullName>
    <label>ValueHash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>